// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logger create dir if missing ,write info to the output and console log 1`] = `
Array [
  Array [
    "/test/root/log/output2009-02-13.txt",
    Object {
      "autoClose": true,
      "encoding": "utf8",
      "flags": "a",
    },
  ],
]
`;

exports[`logger create dir if missing ,write info to the output and console log 2`] = `
Array [
  Array [
    "2009-02-13T23:31:31.011Z - 1 - testmessage1",
  ],
]
`;

exports[`logger create dir if missing ,write info to the output and console log 3`] = `
Array [
  Array [
    "2009-02-13T23:31:31.011Z - 1 - testmessage1",
  ],
]
`;

exports[`logger should parse errors , numbers and objects 1`] = `
Array [
  Array [
    "2009-02-13T23:31:31.011Z - 1 - testmessage1 1 
Error: test 
{\\"test\\":\\"test\\"}",
  ],
]
`;

exports[`logger should parse errors , numbers and objects 2`] = `
Array [
  Array [
    "2009-02-13T23:31:31.011Z - 1 - testmessage1 1 
Error: test 
{\\"test\\":\\"test\\"}",
  ],
]
`;

exports[`logger should parse errors , numbers and objects and pass on errors on failure 1`] = `
Array [
  Array [
    "2009-02-13T23:31:31.011Z - 1 - testmessage1 1 
Error: test 
{\\"test\\":\\"test\\"} ",
  ],
]
`;

exports[`logger should parse errors , numbers and objects and pass on errors on failure 2`] = `
Array [
  Array [
    "TypeError: Converting circular structure to JSON
[object Object]",
  ],
  Array [
    "2009-02-13T23:31:31.011Z - 1 - testmessage1 1 
Error: test 
{\\"test\\":\\"test\\"} ",
  ],
]
`;

exports[`logger write info to the output but not to console.log 1`] = `
Array [
  Array [
    "/test/root/log/output2009-02-15.txt",
    Object {
      "autoClose": true,
      "encoding": "utf8",
      "flags": "a",
    },
  ],
]
`;

exports[`logger write info to the output but not to console.log 2`] = `
Array [
  Array [
    "2009-02-15T05:31:31.011Z - 10 - testmessage1",
  ],
]
`;
